# ClassAwarePruning

./: .gitignore  README.md  data_loader.py  distillation.py  evaluate_one_pruned_model.py  evaluate_pruned_model.py  experiments.py  helpers.py  inference_experiment.py  launch_experiments.py  lrp.py  lrp_utils.py  main.py  metrics.py  models.py  ocap.py  pruner.py  pyproject.toml  resnet_kuangliu.py  run_evaluate_model.sh  selection.py  test_dep_graph_pruner.py  train.sh
config/: config.yaml
config/dataset/: gtsrb.yaml  imagenet.yaml  imagenette.yaml
config/model/: mobilenetv2.yaml  resnet152.yaml  resnet18.yaml  resnet50.yaml  vgg16.yaml
config/pruning/: cap.yaml  ln_structured.yaml  lrp.yaml  ocap.yaml  random.yaml  torchpruner.yaml  unstructured_gradient.yaml  unstructured_magnitude.yaml  unstructured_random.yaml  unstructured_taylor.yaml
filter_selection/: lrp.py  ocap.py  resnet_kuangliu.py
