[project]
name = "classawarepruning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fvcore>=0.1.5.post20221221",
    "hydra-core>=1.3.2",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "onnx>=1.18.0",
    "onnxruntime>=1.22.1",
    "onnxruntime-gpu>=1.22.0",
    "scipy>=1.16.1",
    "tensorboard>=2.20.0",
    "tensorboard-plugin-profile>=2.20.5",
    "torch>=2.7.1",
    "torch-pruning>=1.5.3",
    "torchvision>=0.22.1",
    "wandb>=0.21.0",
    "torchpruner @ git+https://github.com/marcoancona/TorchPruner.git"
]
